--- a/package.json
+++ b/package.json
@@ -1,12 +1,22 @@
 {
-  "name": "P3_hedjal_fouad",
+  "name": "projet3oc",
   "version": "1.0.0",
-  "description": "",
+  "description": "projet3",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --watch ./sass/main.scss:./css/style.css"
+    "sass": "./node_modules/.bin/sass --watch ./sass/main.scss:./public/css/style.css"
   },
-  "author": "",
-  "license": "ISC"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/clement-31/ClementLasnier_3_15012021.git"
+  },
+  "author": "Clément Lasnier",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/clement-31/ClementLasnier_3_15012021/issues"
+  },
+  "homepage": "https://github.com/clement-31/ClementLasnier_3_15012021#readme",
+  "dependencies": {
+    "sass": "^1.32.5"
   }
-  
+}
